<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50px"
    android:orientation="vertical">

    <LinearLayout
        android:layout_above="@+id/kewan_tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50px"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/kewan_shape_textview"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="106px"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/kewan_pay_method" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#b3b3b3"></View>

            <TextView
                android:id="@+id/kewan_tv_alipay"
                android:layout_width="match_parent"
                android:layout_height="116px"
                android:gravity="center"
                android:text="@string/kewan_pay_alipay"
                android:textColor="#6fb2e2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#b3b3b3"></View>

            <TextView
                android:id="@+id/kewan_tv_wechat"
                android:layout_width="match_parent"
                android:layout_height="116px"
                android:gravity="center"
                android:text="@string/kewan_pay_wechat"
                android:textColor="#6fb2e2" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/kewan_tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="113px"
        android:layout_alignParentBottom="true"
        android:background="@drawable/kewan_shape_textview_cancel"
        android:gravity="center"
        android:text="@string/kewan_cancal"
        android:textColor="#6fb2e2" />
</RelativeLayout>
