<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="@dimen/layout_width"
        android:layout_height="@dimen/all_layout_heigh"
        android:background="@drawable/kewan_bg_login"
        android:layout_centerInParent="true"
        android:paddingBottom="40px"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140px"
            >
            <ImageView
                android:id="@+id/kewan_iv_delete"
                android:layout_width="100px"
                android:layout_height="100px"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30px"
                android:layout_centerVertical="true"
                android:padding="20px"
                android:src="@drawable/kewan_iv_back" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="83px"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/kewan_register"
                android:textColor="#ff8800"
                />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="20px"
            android:orientation="vertical"
            android:paddingLeft="30px"
            android:paddingRight="30px">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:orientation="horizontal"
                android:background="@drawable/kewan_shape_edittext"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/kewan_iv_phone"
                    android:layout_margin="20px"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/kewan_edittext_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/kewan_phone_number"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:textSize="11sp"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginTop="20px"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@drawable/kewan_shape_edittext"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/kewan_iv_code"
                        android:layout_margin="20px"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:id="@+id/kewan_edittext_code"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@null"
                        android:hint="@string/kewan_verification_code"
                        android:inputType="number"
                        android:textColor="@android:color/black"
                        android:textSize="11sp" />
                </LinearLayout>


                <TextView
                    android:id="@+id/kewan_tv_getcode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/kewan_bg_getcode"
                    android:gravity="center"
                    android:paddingLeft="20px"
                    android:paddingRight="20px"
                    android:text="@string/kewan_get_verification_code"
                    android:textColor="@color/white"
                    android:textSize="11sp" />

            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:orientation="horizontal"
                android:layout_marginTop="20px"
                android:background="@drawable/kewan_shape_edittext"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/kewan_iv_password"
                    android:layout_margin="20px"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/kewan_edittext_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/kewan_account_edittext_hint"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:textSize="11sp"
                    />
            </LinearLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="40px"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/kewan_tv_register"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_height"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_centerVertical="true"
                    android:background="@drawable/kewan_shape_login_textview"
                    android:gravity="center"
                    android:padding="20px"
                    android:text="@string/kewan_immediately_register"
                    android:textColor="@android:color/white"
                    android:textSize="11sp" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
